Changelog
=========

1.2.3 (unreleased)
------------------

- "show all"-link includes the path attribute.
  [elioschmutz]

- Added support for forward as well as reverse wildcard search.
  This is done by providing two additional dynamic variables in the search pattern,
  value_lwc and value_twc that have leading respectively trailing wildcards appended
  to each of the search terms.
  [lgraf]

- Fix querystring of suggestions with list parameters.
  [buchi]


1.2.2 (2013-09-24)
------------------

- Added class around link to advanced search.
  [Julian Infanger]


1.2.1 (2013-09-10)
------------------

- Fixed monkey patch of mangleQuery.
  [buchi]


1.2 (2013-09-10)
----------------

- Improve reindexing object security performance.
  We now walk down the children and stop walking down if the security indexes
  of an object have not changed.
  [jone]

- Added support for atomic updates.
  This means whenever possible, only the necessary / specified attributes get updated
  in Solr, and more importantly, re-indexed by Plone's indexers.
  IMPORTANT: This requires the Solr instance to have an <updateLog/> configured in
  solrconfig.xml and the schema needs to contain a _version_ field.
  See http://wiki.apache.org/solr/Atomic_Updates for details.
  [lgraf]

- Make sure values in search patterns are all lowercase.
  [buchi]


1.1.2 (2013-07-18)
------------------

- Sort facet fields in the order specified in the Solr control panel.
  [buchi]

- Fixed handling of path filter which was always removed when respect_navroot
  is set to False.
  [buchi]

- Handle invalid facet parameters.
  [buchi]

- Monkey patch reindexObjectSecurity for both CatalogAware and CatalogMultiplex
  so the relevant security indexes in solr also get updated.
  [lgraf]

- Only add the default search argument to the query if it's not None and if
  Solr has a default search field defined in it's schema (which is deprecated